--- a/package.json
+++ b/package.json
@@ -5,23 +5,37 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ./"
   },
   "dependencies": {
     "@avito/eslint-config-alternative": "^1.1.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.26.9",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-import": "^1.13.0",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "next": "9.2.1",
+    "next-redux-wrapper": "^4.0.1",
     "null-loader": "^3.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "url-loader": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
